--- a/classes/_events_.eventemitterimpl.html
+++ b/classes/_events_.eventemitterimpl.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>EventEmitterImpl | @suin/runspace - v2.2.1</title>
-	<meta name="description" content="Documentation for @suin/runspace - v2.2.1">
+	<title>EventEmitterImpl | @suin/runspace - v2.3.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v2.3.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v2.2.1</a>
+					<a href="../index.html" class="title">@suin/runspace - v2.3.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -696,7 +696,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/events.ts#L23">events.ts:23</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/events.ts#L23">events.ts:23</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -768,6 +768,9 @@
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="../modules/_index_.html">&quot;index&quot;</a>
+					</li>
+					<li class=" tsd-kind-module">
+						<a href="../modules/_remote_.html">&quot;remote&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="../modules/_systemmessage_.html">&quot;system<wbr>Message&quot;</a>
@@ -861,6 +864,7 @@
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
 			<ul class="tsd-legend">
+				<li class="tsd-kind-object-literal"><span class="tsd-kind-icon">Object literal</span></li>
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
