--- a/classes/_thread_.threadspace.html
+++ b/classes/_thread_.threadspace.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ThreadSpace | @suin/runspace - v2.2.1</title>
-	<meta name="description" content="Documentation for @suin/runspace - v2.2.1">
+	<title>ThreadSpace | @suin/runspace - v2.3.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v2.3.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v2.2.1</a>
+					<a href="../index.html" class="title">@suin/runspace - v2.3.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -142,7 +142,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L21">thread.ts:21</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L21">thread.ts:21</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -169,7 +169,7 @@
 					<div class="tsd-signature tsd-kind-icon">#events<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">EventEmitter</span><span class="tsd-signature-symbol"> = new EventEmitter()</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L20">thread.ts:20</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L20">thread.ts:20</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -179,7 +179,7 @@
 					<div class="tsd-signature tsd-kind-icon">#is<wbr>Online<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol"> = false</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L21">thread.ts:21</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L21">thread.ts:21</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -189,7 +189,7 @@
 					<div class="tsd-signature tsd-kind-icon">#rejection<wbr>Channel<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">MessageChannel</span><span class="tsd-signature-symbol"> = new MessageChannel()</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L19">thread.ts:19</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L19">thread.ts:19</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -199,7 +199,7 @@
 					<div class="tsd-signature tsd-kind-icon">#terminate<wbr>Channel<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">MessageChannel</span><span class="tsd-signature-symbol"> = new MessageChannel()</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L18">thread.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L18">thread.ts:18</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -209,7 +209,7 @@
 					<div class="tsd-signature tsd-kind-icon">#worker<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Worker</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L17">thread.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L17">thread.ts:17</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -226,7 +226,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L36">thread.ts:36</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L36">thread.ts:36</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
@@ -243,7 +243,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L40">thread.ts:40</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L40">thread.ts:40</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Readable</span></h4>
@@ -266,7 +266,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#on">on</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L68">thread.ts:68</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L68">thread.ts:68</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -284,7 +284,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#on">on</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L69">thread.ts:69</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L69">thread.ts:69</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -302,7 +302,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#on">on</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L70">thread.ts:70</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L70">thread.ts:70</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -328,7 +328,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L97">thread.ts:97</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L97">thread.ts:97</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -351,7 +351,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L105">thread.ts:105</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L105">thread.ts:105</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -368,7 +368,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L93">thread.ts:93</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L93">thread.ts:93</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -391,7 +391,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L79">thread.ts:79</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L79">thread.ts:79</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -408,7 +408,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L101">thread.ts:101</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L101">thread.ts:101</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -432,7 +432,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#send">send</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L48">thread.ts:48</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L48">thread.ts:48</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -455,7 +455,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L84">thread.ts:84</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L84">thread.ts:84</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -473,7 +473,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#stop">stop</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L56">thread.ts:56</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L56">thread.ts:56</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -491,7 +491,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#waitmessage">waitMessage</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L52">thread.ts:52</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L52">thread.ts:52</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -515,7 +515,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#waitstart">waitStart</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L44">thread.ts:44</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L44">thread.ts:44</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -533,7 +533,7 @@
 							<aside class="tsd-sources">
 								<p>Implementation of <a href="../interfaces/_index_.space.html">Space</a>.<a href="../interfaces/_index_.space.html#waitstop">waitStop</a></p>
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.ts#L62">thread.ts:62</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.ts#L62">thread.ts:62</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
@@ -562,6 +562,9 @@
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="../modules/_index_.html">&quot;index&quot;</a>
+					</li>
+					<li class=" tsd-kind-module">
+						<a href="../modules/_remote_.html">&quot;remote&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="../modules/_systemmessage_.html">&quot;system<wbr>Message&quot;</a>
@@ -658,6 +661,7 @@
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
 			<ul class="tsd-legend">
+				<li class="tsd-kind-object-literal"><span class="tsd-kind-icon">Object literal</span></li>
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
