--- a/globals.html
+++ b/globals.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>@suin/runspace - v2.2.1</title>
-	<meta name="description" content="Documentation for @suin/runspace - v2.2.1">
+	<title>@suin/runspace - v2.3.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v2.3.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="index.html" class="title">@suin/runspace - v2.2.1</a>
+					<a href="index.html" class="title">@suin/runspace - v2.3.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -56,7 +56,7 @@
 					<a href="globals.html">Globals</a>
 				</li>
 			</ul>
-			<h1>@suin/runspace - v2.2.1</h1>
+			<h1>@suin/runspace - v2.3.0</h1>
 		</div>
 	</div>
 </header>
@@ -75,6 +75,7 @@
 								<li class="tsd-kind-module"><a href="modules/_events_.html" class="tsd-kind-icon">&quot;events&quot;</a></li>
 								<li class="tsd-kind-module"><a href="modules/_fixtures_index_.html" class="tsd-kind-icon">&quot;fixtures/index&quot;</a></li>
 								<li class="tsd-kind-module"><a href="modules/_index_.html" class="tsd-kind-icon">&quot;index&quot;</a></li>
+								<li class="tsd-kind-module"><a href="modules/_remote_.html" class="tsd-kind-icon">&quot;remote&quot;</a></li>
 								<li class="tsd-kind-module"><a href="modules/_systemmessage_.html" class="tsd-kind-icon">&quot;system<wbr>Message&quot;</a></li>
 								<li class="tsd-kind-module"><a href="modules/_thread_.html" class="tsd-kind-icon">&quot;thread&quot;</a></li>
 								<li class="tsd-kind-module"><a href="modules/_thread_worker_.html" class="tsd-kind-icon">&quot;thread.worker&quot;</a></li>
@@ -106,6 +107,9 @@
 						<a href="modules/_index_.html">&quot;index&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
+						<a href="modules/_remote_.html">&quot;remote&quot;</a>
+					</li>
+					<li class=" tsd-kind-module">
 						<a href="modules/_systemmessage_.html">&quot;system<wbr>Message&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
@@ -128,6 +132,7 @@
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
 			<ul class="tsd-legend">
+				<li class="tsd-kind-object-literal"><span class="tsd-kind-icon">Object literal</span></li>
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
