--- a/interfaces/_index_.space.html
+++ b/interfaces/_index_.space.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Space | @suin/runspace - v2.2.1</title>
-	<meta name="description" content="Documentation for @suin/runspace - v2.2.1">
+	<title>Space | @suin/runspace - v2.3.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v2.3.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v2.2.1</a>
+					<a href="../index.html" class="title">@suin/runspace - v2.3.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -81,6 +81,7 @@
 				<h3>Implemented by</h3>
 				<ul class="tsd-hierarchy">
 					<li><a href="../classes/_childprocess_.childprocessspace.html" class="tsd-signature-type">ChildProcessSpace</a></li>
+					<li><a href="../classes/_remote_.remotespace.html" class="tsd-signature-type">RemoteSpace</a></li>
 					<li><a href="../classes/_thread_.threadspace.html" class="tsd-signature-type">ThreadSpace</a></li>
 				</ul>
 			</section>
@@ -117,7 +118,7 @@
 					<div class="tsd-signature tsd-kind-icon">is<wbr>Running<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">boolean</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/index.ts#L10">index.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/index.ts#L10">index.ts:10</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -132,7 +133,7 @@
 					<div class="tsd-signature tsd-kind-icon">stdout<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Readable</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/index.ts#L12">index.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/index.ts#L12">index.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -151,7 +152,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/index.ts#L47">index.ts:47</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/index.ts#L47">index.ts:47</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -175,7 +176,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/index.ts#L49">index.ts:49</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/index.ts#L49">index.ts:49</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -192,7 +193,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/index.ts#L51">index.ts:51</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/index.ts#L51">index.ts:51</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -218,7 +219,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/index.ts#L23">index.ts:23</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/index.ts#L23">index.ts:23</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -249,7 +250,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/index.ts#L33">index.ts:33</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/index.ts#L33">index.ts:33</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -271,7 +272,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/index.ts#L28">index.ts:28</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/index.ts#L28">index.ts:28</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -299,7 +300,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/index.ts#L17">index.ts:17</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/index.ts#L17">index.ts:17</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -321,7 +322,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/index.ts#L38">index.ts:38</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/index.ts#L38">index.ts:38</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -355,6 +356,9 @@
 					</li>
 					<li class="current tsd-kind-module">
 						<a href="../modules/_index_.html">&quot;index&quot;</a>
+					</li>
+					<li class=" tsd-kind-module">
+						<a href="../modules/_remote_.html">&quot;remote&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="../modules/_systemmessage_.html">&quot;system<wbr>Message&quot;</a>
@@ -430,6 +434,7 @@
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
 			<ul class="tsd-legend">
+				<li class="tsd-kind-object-literal"><span class="tsd-kind-icon">Object literal</span></li>
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
