--- a/modules/_fixtures_index_.html
+++ b/modules/_fixtures_index_.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;fixtures/index&quot; | @suin/runspace - v2.2.1</title>
-	<meta name="description" content="Documentation for @suin/runspace - v2.2.1">
+	<title>&quot;fixtures/index&quot; | @suin/runspace - v2.3.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v2.3.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v2.2.1</a>
+					<a href="../index.html" class="title">@suin/runspace - v2.3.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -104,7 +104,7 @@
 					<div class="tsd-signature tsd-kind-icon">echo<wbr>Message<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/echoMessage.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/echoMessage.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L1">fixtures/index.ts:1</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L1">fixtures/index.ts:1</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -114,7 +114,7 @@
 					<div class="tsd-signature tsd-kind-icon">evaluates<wbr>Message<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/evaluatesMessage.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/evaluatesMessage.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L2">fixtures/index.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L2">fixtures/index.ts:2</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -124,7 +124,7 @@
 					<div class="tsd-signature tsd-kind-icon">sends<wbr>Bye<wbr>OnSIGTERM<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/sendsByeOnSIGTERM"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/sendsByeOnSIGTERM&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L3">fixtures/index.ts:3</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L3">fixtures/index.ts:3</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -134,7 +134,7 @@
 					<div class="tsd-signature tsd-kind-icon">sends<wbr>Hello<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/sendsHello.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/sendsHello.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L4">fixtures/index.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L4">fixtures/index.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -144,7 +144,7 @@
 					<div class="tsd-signature tsd-kind-icon">sends<wbr>Hello<wbr>In500milliseconds<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/sendsHelloIn500milliseconds.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/sendsHelloIn500milliseconds.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L5">fixtures/index.ts:5</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L5">fixtures/index.ts:5</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -154,7 +154,7 @@
 					<div class="tsd-signature tsd-kind-icon">sends<wbr>One<wbr>Two<wbr>Three<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/sendsOneTwoThree.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/sendsOneTwoThree.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L7">fixtures/index.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L7">fixtures/index.ts:7</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -164,7 +164,7 @@
 					<div class="tsd-signature tsd-kind-icon">stdout<wbr>Hello<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/stdoutHello.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/stdoutHello.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L8">fixtures/index.ts:8</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L8">fixtures/index.ts:8</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -174,7 +174,7 @@
 					<div class="tsd-signature tsd-kind-icon">stops<wbr>Immediately<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/stopsImmediately.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/stopsImmediately.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L9">fixtures/index.ts:9</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L9">fixtures/index.ts:9</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -184,7 +184,7 @@
 					<div class="tsd-signature tsd-kind-icon">stops<wbr>In500milliseconds<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/stopsIn500milliseconds.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/stopsIn500milliseconds.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L10">fixtures/index.ts:10</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L10">fixtures/index.ts:10</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -194,7 +194,7 @@
 					<div class="tsd-signature tsd-kind-icon">stops<wbr>Never<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/stopsNever.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/stopsNever.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L11">fixtures/index.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L11">fixtures/index.ts:11</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -204,7 +204,7 @@
 					<div class="tsd-signature tsd-kind-icon">stops<wbr>Never<wbr>IgnoreSIGTERM<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/stopsNeverIgnoreSIGTERM.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/stopsNeverIgnoreSIGTERM.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L12">fixtures/index.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L12">fixtures/index.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -214,7 +214,7 @@
 					<div class="tsd-signature tsd-kind-icon">thread<wbr>Access<wbr>Parent<wbr>Port<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/thread.accessParentPort.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/thread.accessParentPort.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L14">fixtures/index.ts:14</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L14">fixtures/index.ts:14</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -224,7 +224,7 @@
 					<div class="tsd-signature tsd-kind-icon">thread<wbr>Access<wbr>Worker<wbr>Data<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/thread.accessWorkerData.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/thread.accessWorkerData.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L13">fixtures/index.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L13">fixtures/index.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -234,7 +234,7 @@
 					<div class="tsd-signature tsd-kind-icon">throws<wbr>Custom<wbr>Error<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/throwsCustomError.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/throwsCustomError.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L15">fixtures/index.ts:15</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L15">fixtures/index.ts:15</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -244,7 +244,7 @@
 					<div class="tsd-signature tsd-kind-icon">throws<wbr>Error<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/throwsError.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/throwsError.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L16">fixtures/index.ts:16</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L16">fixtures/index.ts:16</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -254,7 +254,7 @@
 					<div class="tsd-signature tsd-kind-icon">throws<wbr>String<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/throwsString.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/throwsString.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L17">fixtures/index.ts:17</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L17">fixtures/index.ts:17</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -264,7 +264,7 @@
 					<div class="tsd-signature tsd-kind-icon">unhandled<wbr>Rejection<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/unhandledRejection.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/unhandledRejection.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L18">fixtures/index.ts:18</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L18">fixtures/index.ts:18</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -274,7 +274,7 @@
 					<div class="tsd-signature tsd-kind-icon">unhandled<wbr>Rejection<wbr>String<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"./fixtures/unhandledRejectionString.js"</span><span class="tsd-signature-symbol"> = &quot;./fixtures/unhandledRejectionString.js&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/fixtures/index.ts#L19">fixtures/index.ts:19</a></li>
+							<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/fixtures/index.ts#L19">fixtures/index.ts:19</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -300,6 +300,9 @@
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="_index_.html">&quot;index&quot;</a>
+					</li>
+					<li class=" tsd-kind-module">
+						<a href="_remote_.html">&quot;remote&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
 						<a href="_systemmessage_.html">&quot;system<wbr>Message&quot;</a>
@@ -378,6 +381,7 @@
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
 			<ul class="tsd-legend">
+				<li class="tsd-kind-object-literal"><span class="tsd-kind-icon">Object literal</span></li>
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
