--- a/modules/_thread_worker_.html
+++ b/modules/_thread_worker_.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>&quot;thread.worker&quot; | @suin/runspace - v2.2.1</title>
-	<meta name="description" content="Documentation for @suin/runspace - v2.2.1">
+	<title>&quot;thread.worker&quot; | @suin/runspace - v2.3.0</title>
+	<meta name="description" content="Documentation for @suin/runspace - v2.3.0">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
 </head>
@@ -22,7 +22,7 @@
 						<li class="state loading">Preparing search index...</li>
 						<li class="state failure">The search index is not available</li>
 					</ul>
-					<a href="../index.html" class="title">@suin/runspace - v2.2.1</a>
+					<a href="../index.html" class="title">@suin/runspace - v2.3.0</a>
 				</div>
 				<div class="table-cell" id="tsd-widgets">
 					<div id="tsd-filter">
@@ -94,7 +94,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.worker.ts#L74">thread.worker.ts:74</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.worker.ts#L74">thread.worker.ts:74</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -128,7 +128,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.worker.ts#L68">thread.worker.ts:68</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.worker.ts#L68">thread.worker.ts:68</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -156,7 +156,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.worker.ts#L62">thread.worker.ts:62</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.worker.ts#L62">thread.worker.ts:62</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -184,7 +184,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.2.1/thread.worker.ts#L8">thread.worker.ts:8</a></li>
+									<li>Defined in <a href="https://github.com/suin/runspace/blob/v2.3.0/thread.worker.ts#L8">thread.worker.ts:8</a></li>
 								</ul>
 							</aside>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -240,6 +240,9 @@
 						<a href="_index_.html">&quot;index&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
+						<a href="_remote_.html">&quot;remote&quot;</a>
+					</li>
+					<li class=" tsd-kind-module">
 						<a href="_systemmessage_.html">&quot;system<wbr>Message&quot;</a>
 					</li>
 					<li class=" tsd-kind-module">
@@ -274,6 +277,7 @@
 		<h2>Legend</h2>
 		<div class="tsd-legend-group">
 			<ul class="tsd-legend">
+				<li class="tsd-kind-object-literal"><span class="tsd-kind-icon">Object literal</span></li>
 				<li class="tsd-kind-variable"><span class="tsd-kind-icon">Variable</span></li>
 				<li class="tsd-kind-function"><span class="tsd-kind-icon">Function</span></li>
 				<li class="tsd-kind-type-alias"><span class="tsd-kind-icon">Type alias</span></li>
